regras-firewall/iptables-files/iptables-first_rule-500
# Generated by iptables-save v1.4.21 on Wed Nov 22 12:59:00 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 10.127.0.0/16 -j ACCEPT
-A INPUT -s 10.128.0.0/12 -j ACCEPT
-A FORWARD -s 10.127.0.0/16 -j ACCEPT
-A FORWARD -s 10.128.0.0/12 -j ACCEPT
-A FORWARD -s 10.170.3.227/32 -d 10.170.3.245/32 -m comment --comment "rule 0 - allow access between endpoints" -j ACCEPT
-A FORWARD -s 10.170.3.245/32 -d 10.170.3.227/32 -m comment --comment "rule 0 - allow access between endpoints" -j ACCEPT
-A FORWARD -s 10.0.0.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 1 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 2 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 3 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 4 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 5 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 6 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 7 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 8 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 9 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 10 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 11 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 12 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 13 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 14 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 15 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 16 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 17 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 18 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 19 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 20 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 21 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 22 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 23 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 24 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 25 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 26 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 27 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 28 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 29 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 30 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 31 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 32 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 33 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 34 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 35 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 36 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 37 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 38 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 39 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 40 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 41 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 42 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 43 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 44 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 45 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 46 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 47 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 48 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 49 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 50 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 51 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 52 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 53 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 54 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 55 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 56 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 57 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 58 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 59 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 60 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 61 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 62 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 63 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 64 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 65 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 66 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 67 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 68 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 69 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 70 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 71 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 72 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 73 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 74 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 75 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 76 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 77 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 78 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 79 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 80 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 81 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 82 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 83 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 84 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 85 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 86 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 87 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 88 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 89 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 90 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 91 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 92 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 93 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 94 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 95 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 96 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 97 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 98 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 99 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 100 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 101 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 102 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 103 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 104 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 105 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 106 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 107 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 108 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 109 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 110 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 111 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 112 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 113 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 114 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 115 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 116 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 117 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 118 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 119 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 120 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 121 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 122 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 123 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 124 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 125 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 126 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 127 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 128 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 129 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 130 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 131 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 132 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 133 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 134 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 135 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 136 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 137 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 138 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 139 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 140 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 141 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 142 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 143 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 144 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 145 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 146 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 147 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 148 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 149 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 150 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 151 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 152 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 153 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 154 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 155 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 156 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 157 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 158 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 159 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 160 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 161 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 162 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 163 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 164 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 165 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 166 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 167 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 168 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 169 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 170 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 171 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 172 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 173 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 174 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 175 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 176 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 177 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 178 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 179 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 180 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 181 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 182 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 183 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 184 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 185 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 186 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 187 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 188 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 189 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 190 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 191 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 192 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 193 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 194 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 195 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 196 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 197 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 198 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 199 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 200 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 201 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 202 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 203 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 204 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 205 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 206 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 207 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 208 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 209 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 210 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 211 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 212 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 213 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 214 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 215 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 216 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 217 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 218 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 219 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 220 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 221 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 222 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 223 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 224 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 225 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 226 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 227 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 228 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 229 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 230 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 231 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 232 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 233 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 234 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 235 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 236 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 237 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 238 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 239 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 240 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 241 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 242 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 243 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 244 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 245 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 246 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 247 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 248 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 249 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 250 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 251 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.251/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 252 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.252/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 253 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.253/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 254 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.254/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 255 --> without match" -j ACCEPT
-A FORWARD -s 10.0.0.255/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 256 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.0/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 257 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.1/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 258 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.2/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 259 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.3/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 260 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.4/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 261 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.5/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 262 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.6/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 263 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.7/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 264 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.8/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 265 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.9/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 266 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.10/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 267 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.11/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 268 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.12/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 269 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.13/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 270 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.14/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 271 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.15/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 272 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.16/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 273 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.17/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 274 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.18/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 275 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.19/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 276 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.20/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 277 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.21/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 278 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.22/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 279 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.23/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 280 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.24/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 281 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.25/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 282 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.26/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 283 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.27/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 284 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.28/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 285 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.29/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 286 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.30/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 287 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.31/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 288 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.32/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 289 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.33/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 290 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.34/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 291 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.35/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 292 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.36/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 293 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.37/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 294 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.38/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 295 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.39/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 296 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.40/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 297 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.41/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 298 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.42/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 299 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.43/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 300 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.44/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 301 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.45/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 302 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.46/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 303 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.47/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 304 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.48/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 305 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.49/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 306 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.50/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 307 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.51/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 308 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.52/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 309 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.53/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 310 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.54/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 311 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.55/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 312 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.56/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 313 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.57/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 314 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.58/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 315 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.59/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 316 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.60/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 317 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.61/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 318 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.62/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 319 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.63/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 320 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.64/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 321 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.65/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 322 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.66/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 323 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.67/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 324 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.68/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 325 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.69/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 326 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.70/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 327 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.71/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 328 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.72/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 329 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.73/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 330 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.74/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 331 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.75/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 332 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.76/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 333 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.77/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 334 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.78/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 335 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.79/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 336 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.80/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 337 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.81/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 338 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.82/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 339 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.83/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 340 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.84/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 341 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.85/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 342 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.86/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 343 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.87/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 344 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.88/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 345 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.89/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 346 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.90/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 347 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.91/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 348 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.92/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 349 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.93/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 350 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.94/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 351 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.95/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 352 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.96/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 353 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.97/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 354 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.98/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 355 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.99/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 356 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.100/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 357 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.101/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 358 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.102/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 359 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.103/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 360 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.104/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 361 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.105/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 362 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.106/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 363 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.107/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 364 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.108/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 365 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.109/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 366 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.110/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 367 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.111/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 368 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.112/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 369 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.113/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 370 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.114/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 371 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.115/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 372 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.116/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 373 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.117/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 374 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.118/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 375 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.119/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 376 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.120/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 377 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.121/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 378 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.122/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 379 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.123/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 380 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.124/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 381 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.125/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 382 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.126/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 383 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.127/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 384 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.128/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 385 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.129/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 386 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.130/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 387 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.131/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 388 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.132/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 389 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.133/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 390 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.134/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 391 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.135/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 392 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.136/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 393 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.137/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 394 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.138/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 395 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.139/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 396 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.140/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 397 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.141/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 398 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.142/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 399 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.143/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 400 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.144/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 401 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.145/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 402 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.146/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 403 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.147/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 404 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.148/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 405 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.149/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 406 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.150/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 407 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.151/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 408 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.152/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 409 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.153/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 410 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.154/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 411 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.155/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 412 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.156/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 413 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.157/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 414 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.158/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 415 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.159/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 416 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.160/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 417 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.161/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 418 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.162/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 419 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.163/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 420 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.164/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 421 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.165/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 422 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.166/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 423 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.167/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 424 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.168/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 425 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.169/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 426 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.170/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 427 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.171/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 428 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.172/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 429 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.173/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 430 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.174/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 431 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.175/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 432 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.176/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 433 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.177/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 434 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.178/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 435 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.179/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 436 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.180/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 437 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.181/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 438 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.182/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 439 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.183/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 440 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.184/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 441 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.185/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 442 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.186/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 443 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.187/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 444 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.188/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 445 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.189/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 446 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.190/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 447 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.191/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 448 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.192/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 449 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.193/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 450 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.194/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 451 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.195/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 452 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.196/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 453 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.197/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 454 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.198/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 455 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.199/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 456 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.200/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 457 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.201/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 458 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.202/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 459 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.203/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 460 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.204/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 461 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.205/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 462 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.206/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 463 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.207/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 464 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.208/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 465 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.209/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 466 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.210/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 467 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.211/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 468 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.212/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 469 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.213/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 470 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.214/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 471 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.215/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 472 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.216/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 473 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.217/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 474 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.218/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 475 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.219/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 476 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.220/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 477 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.221/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 478 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.222/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 479 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.223/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 480 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.224/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 481 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.225/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 482 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.226/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 483 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.227/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 484 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.228/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 485 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.229/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 486 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.230/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 487 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.231/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 488 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.232/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 489 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.233/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 490 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.234/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 491 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.235/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 492 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.236/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 493 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.237/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 494 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.238/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 495 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.239/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 496 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.240/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 497 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.241/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 498 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.242/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 499 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.243/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 500 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.244/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 501 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.245/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 502 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.246/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 503 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.247/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 504 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.248/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 505 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.249/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 506 --> without match" -j ACCEPT
-A FORWARD -s 10.0.1.250/32 -d 10.170.3.245/32 -m comment --comment "iptables rule 507 --> without match" -j ACCEPT
-A OUTPUT -s 10.127.0.0/16 -j ACCEPT
-A OUTPUT -s 10.128.0.0/12 -j ACCEPT
COMMIT
# Completed on Wed Nov 22 12:59:00 2017
